databox/deployment/cms/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: databox-cms
  labels:
    app.kubernetes.io/name: databox-cms
spec:
  selector:
    app.kubernetes.io/name: databox-cms
  ports:
    - name: http
      port: 80
      targetPort: http
